--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -1,80 +1,142 @@
- *{
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
-     font-family: sans-serif;
-     list-style: none;
-     text-decoration: none;
- }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  list-style: none;
+  text-decoration: none;
+}
 
- body {
-     height: 100vh;
-     background: blue;
-     background-size: cover;
-     background-position: center;
- }
+body {
+  height: 100vh;
+  background: rgb(255, 207, 70);
+  background-size: cover;
+  background-position: center;
+}
 
- header {
-     position: fixed;
-     top: 0;
-     left: 0;
-     right: 0;
-     background: white ;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     padding: 0 8%;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8%;
+}
 
- }
+header .logo {
+  font-size: 20px;
+  font-weight: 900;
+  color: #000;
+  transition: 0.5s;
+}
 
+header .logo:hover {
+  transform: scale(1.2);
+}
 
- header .logo {
-         font-size: 20px;
-         font-weight: 900;
-         color: #000;
-         transition: .5s;
- }
-
-
- header .logo:hover {
-    transform: scale(1.2);
- }
-
- header nav ul li {
-     position: relative;
-     float: left;
- }
+header nav ul li {
+  position: relative;
+  float: left;
+}
 
 header nav ul li a {
-    padding: 15px;
-    color: black;
-    font-size: 16px;
-    display: block;
+  padding: 1em;
+  color: black;
+  font-size: 1em;
+  display: block;
+  border: 2px solid transparent;
+  transition: 0.3s;
 }
 
 header nav ul li a:hover {
-    background: black;
-    color: white;
+  background: rgb(65, 65, 65);
+  color: white;
+  border-color: rgb(65, 65, 65);
 }
 
 nav ul li ul {
-    position: absolute;
-    left: 0;
-    width: 180px;
-    background: white;
-    display: none;
-}
-
-nav ul li ul li {
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0,.1);
-}
-
-nav ul li ul li ul {
-    left: 180px;
-    top: 0;
+  position: absolute;
+  left: 0;
+  width: 180px;
+  background: white;
+  display: none;
 }
 
 nav ul li:hover > ul {
-    display: initial;
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s, visibility 0.3s;
 }
+
+nav ul li ul li {
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+nav ul li ul li ul {
+  left: 180px;
+  top: 0;
+}
+
+nav ul li:hover > ul {
+  display: initial;
+}
+
+/* серега */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.search-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  padding: 10px;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.search-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    border: none; 
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.search-button>.colortext{
+    color: white;
+}
+
+.search-button:hover {
+  background-color: #0056b3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
