--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -27,12 +27,12 @@
             <ul>
                 <li><a href="/login">Account</a></li>
                 <li>
-                    <a href="#">Tracking &bigtriangledown; </a>
+                    <a href="#">Tracking</a>
                     <ul>
                         <li><a href="#">HTML</a></li>
                         <li><a href="#">CSS</a></li>
                         <li>
-                            <a href="#">JavaScript &bigtriangledown; </a>
+                            <a href="#">JavaScript</a>
                             <ul>
                                 <li><a href="#">123</a></li>
                                 <li><a href="#">228</a></li>
