--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -5,32 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../../static/main/css/login.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="wlapper">
-        <form action="">
+    <header>
+        <a href="/" class="logo">ProFlag</a>
+        <nav>
+            <ul>
+                <li><a href="/search">Отслеживание</a></li>
+                <li><a href="/about">О нас</a></li>
+                <li><a href="/contact">Контакты</a></li>
+                <li><a href="/user">Аккаунт</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="login-container">
             <h1>Вход</h1>
-            <div class="input-box">
-                <input type="text" placeholder="Username"
-                required>
-                <i class='bx bxs-user'></i>
-            </div>
-            <div class="input-box">
-                <input type="password" placeholder="Password"
-                required>
-                <i class='bx bxs-lock-alt' ></i>
-            </div>
-            <div class="remember-forgot">
-                <label><input type="checkbox">Запомнить меня
-                </label>
-                <a href="#">Забыли пароль?</a>
-            </div>
-            <button type="submit" class="btn">Войти</button>
-            <div class="register-link">
-                <p>Нет аккаунта? <a href="#">Зарегистрироваться</a></p>
-            </div>
-        </form>
+            <form method="post">
+                {% csrf_token %}
+                <div class="input-box">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <i class='bx bxs-user'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" name="password" placeholder="Password" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox" name="remember">Запомнить меня</label>
+                    <a href="#">Забыли пароль?</a>
+                </div>
+                <button type="submit" class="btn">Войти</button>
+                <div class="register-link">
+                    <p>Нет аккаунта? <a href="#">Зарегистрироваться</a></p>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
