--- a/search/templates/search/track_order.html
+++ b/search/templates/search/track_order.html
@@ -10,10 +10,10 @@
         <a href="/" class="logo">ProFlag</a>
         <nav>
             <ul>
-                <li><a href="/login">Аккаунт</a></li>
+                <li><a href="/user">Аккаунт</a></li>
                 <li><a href="/search">Отслеживание</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="/about">О нас</a></li>
+                <li><a href="/contact">Контакты</a></li>
             </ul>
         </nav>
     </header>
