--- a/login/templates/login/login_home.html
+++ b/login/templates/login/login_home.html
@@ -16,7 +16,7 @@
         <a href="/" class="logo">ProFlag</a>
         <nav>
             <ul>
-                <li><a href="/login">Account</a></li>
+                <li><a href="/accounts/login">Account</a></li>
                 <li>
                     <a href="#">Tracking</a>
                     <ul>
