--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -120,3 +120,26 @@ body {
 .register-link p a:hover{
     text-decoration: underline;
 }
+
+.btn-link {
+    color: white;
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+    padding: 0;
+    text-decoration: none;
+    font-size: 14.5px;
+    text-align: center;
+    margin: 0;
+    height: 14.5px;
+}
+
+.btn-link {
+    color: white;
+    text-decoration: none;
+}
+
+.btn-link:hover{
+    text-decoration: underline;
+}
