--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -25,7 +25,7 @@
         <a href="/about" class="logo">ProFlag</a>
         <nav>
             <ul>
-                <li><a href="/login">Account</a></li>
+                <li><a href="/accounts/login">Account</a></li>
                 <li>
                     <a href="#">Tracking</a>
                     <ul>
